syntax = "proto3";

option java_multiple_files = true;
option java_package = "wordvector";
option java_outer_classname = "WordVectorProto";

package wordvector;

// The wordvector service definition.
service WordVector {
  // Sends a word vector of given word.
  rpc GetVector (GetVectorRequest) returns (GetVectorReply) {}
}

// The request message containing the word.
message GetVectorRequest {
  string word = 1;
}

// The response message containing the word, word index in the 
// vocabulary and its vector.
message GetVectorReply {
  string word = 1;
  int64 index = 2;
  repeated float features = 3;
}
